# stock-analyzer

./: .gitignore  AGENTS.md  README.md  app.py  function_app.py  pyproject.toml  requirements.txt  wrangler.toml
.github/workflows/: deploy-azure.yml
agent_service/: README.md  adapters.py  main.py
assets/: styles.css
cloudflare/: worker.js
scripts/: deploy-azure.ps1
