[project]
name = "stock-analyzer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.21.0",
    "dash>=2.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
# Dependencies for the standalone chat agent microservice (agent_service/).
# The Dash app itself does NOT need these; install only on the host that
# runs the microservice:  uv sync --extra agent
#
# The dexter backend is vendored under agent_service/vendor/dexter
# (from the new Python port: D:/vs_project/dexter-python) so its runtime
# dependencies are listed here directly.
agent = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    # dexter (Python port) runtime deps
    "langchain-core>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-frontmatter>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "html2text>=2024.2.26",
    "requests>=2.32.0",
]
